# MetaICU

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: amsterdam_vocab_documentation.md  aumc_grid_airway_category_schema.md  aumc_grid_context.md  policy_decisions.md  user_runbook.md
mappings/: aumc_supplied_vocab.csv
scripts/: analyze_aumc_grid_categorical_indicator.py  analyze_aumc_grid_features_v1.py  analyze_aumc_grid_features_v2.py  audit_aumc_grid_feature_diagnostics.py  audit_samp_policies.py  build_amsterdam_split.py  build_amsterdam_vocab.py  plot_aumc_grid_patient_heatmaps.py  retrieve_externals.py  run_bounded_premeds_meds_tokenized_audit.sh  run_build_amsterdam_vocab_source_vocab.sh
slurm/: run_audit_samp_policies.sh  run_meds_1000.sh  run_meds_on_workspace.sh  run_premeds_1000_shards_smoke.sh  run_premeds_meds_1000_smoke.sh
src/aumc_pipeline/cli/: build_amsterdam_meds.py  build_amsterdam_premeds.py  build_amsterdam_split.py  build_amsterdam_tokenized.py  build_amsterdam_vocab.py  retrieve_externals.py
src/aumc_pipeline/configs/: __init__.py  meds.yaml  pre_meds.yaml  split.yaml  tokenization.yaml  vocab.yaml
src/aumc_pipeline/meds/: build_workflow.py  categorical.py  intervals.py  numeric.py  vocab.py
src/aumc_pipeline/pre_meds/: admissions.py  build_workflow.py  large_tables.py
src/aumc_pipeline/splits/: __init__.py
src/aumc_pipeline/tokenization/: __init__.py  build_workflow.py  vocabulary.py
src/aumc_pipeline/transforms/: __init__.py  binning.py  hf_inventory.py
src/aumc_pipeline/utils/: parquet_datasets.py
src/aumc_pipeline/vocab_pipeline/: build_workflow.py  candidate_map.py  evidence_normalization.py  source_vocab.py
src/metaicu/aumcdb/common/: __init__.py  parquet.py  raw_schema.py  raw_shards.py  raw_tables.py
src/metaicu/aumcdb/grid/: build_workflow.py  encode.py  extract_indicator.py  extract_numeric.py  extract_rate.py  extract_static.py  impute.py  manifest_parser.py  raw_csv.py  scale.py  unit_conversion_overrides.py
src/metaicu/aumcdb/grid/cli/: grid_build_dataset.py  grid_build_manifest.py
src/metaicu/aumcdb/grid/configs/: grid_dataset.yaml
src/metaicu/aumcdb/grid/data/: aumc_grid_feature_manifest_review.md  icarefm_preprocessing_reference.md
src/metaicu/aumcdb/tokenized/cli/: build_amsterdam_meds.py  build_amsterdam_premeds.py  build_amsterdam_split.py  build_amsterdam_tokenized.py  build_amsterdam_vocab.py
src/metaicu/aumcdb/tokenized/configs/: vocab.yaml
src/metaicu/aumcdb/tokenized/meds/: anchors.py  build_workflow.py  categorical.py  intervals.py  numeric.py  numeric_qc.py  vocab.py
src/metaicu/aumcdb/tokenized/pre_meds/: build_workflow.py  common.py  interval_tables.py  large_tables.py  measured.py
src/metaicu/aumcdb/tokenized/splits/: build_splits.py
src/metaicu/aumcdb/tokenized/tokenization/: build_workflow.py
src/metaicu/aumcdb/tokenized/transforms/: binning.py  (+1 more)
src/metaicu/cli/: build_amsterdam_meds.py  build_amsterdam_premeds.py  build_amsterdam_split.py  build_amsterdam_tokenized.py  build_amsterdam_vocab.py  grid_build_manifest.py  retrieve_externals.py
src/metaicu/configs/: grid_manifest.yaml  pre_meds.yaml
src/metaicu/grid/: __init__.py  manifest.py
src/metaicu/grid/data/: icarefm_table_s3_features.csv
src/metaicu/meds/: anchors.py  build_workflow.py  categorical.py  common.py  intervals.py  numeric.py  vocab.py
src/metaicu/pre_meds/: __init__.py  build_workflow.py  interval_tables.py  large_tables.py  measured.py
src/metaicu/tokenization/: build_workflow.py
src/metaicu/transforms/: binning.py  hf_inventory.py
src/metaicu/utils/: parquet_datasets.py
src/metaicu/vocab_pipeline/: build_workflow.py  candidate_map.py  evidence_normalization.py  policy_common.py  source_vocab.py
tests/: test_binning.py  test_derive_targets.py  test_grid_dataset_structure.py  test_grid_impute.py  test_grid_manifest.py  test_hf_inventory.py  test_meds_numeric.py  test_meds_split.py  test_numeric_qc.py  test_retrieve_externals.py  test_shared_aumc_io.py  test_splits_and_premeds.py  test_supplied_vocab_contract.py  test_tokenization.py  test_vocab_candidate_map.py  test_vocab_evidence_normalization.py  test_vocab_policy_common.py  test_vocab_source_extraction.py
tests/fixtures/: __init__.py  aumc_bounded.py
(+6 files in other folders)
