[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaicu"
version = "0.1.0"
description = "AmsterdamUMCdb supplied-vocabulary preparation utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Amir Vahdani", email = "a.m.vahdani@gmail.com" }]
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "pandas>=2.0",
  "polars[rtcompat]>=1.0",
  "pyarrow>=14.0",
  "PyYAML>=6.0",
  "safetensors>=0.5",
  "torch>=2.0",
]

[project.scripts]
build-amsterdam-vocab = "metaicu.cli.build_amsterdam_vocab:main"
build-aumc-premeds = "metaicu.cli.build_amsterdam_premeds:main"
build-aumc-meds = "metaicu.cli.build_amsterdam_meds:main"
build-aumc-tokenized = "metaicu.cli.build_amsterdam_tokenized:main"
retrieve-aumc-externals = "metaicu.cli.retrieve_externals:main"
grid_build_manifest = "metaicu.cli.grid_build_manifest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
metaicu = ["configs/*.yaml", "grid/data/*.csv"]
