[metadata]
name = aumc-pipeline
description = AmsterdamUMCdb supplied-vocabulary preparation pipeline
author = Amir Vahdani
author_email = a.m.vahdani@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    hydra-core
    omegaconf
    pandas
    polars[rtcompat]

[options.packages.find]
where = src

[options.package_data]
aumc_pipeline = configs/*.yaml

[options.entry_points]
console_scripts =
    build-amsterdam-vocab = aumc_pipeline.cli.build_amsterdam_vocab:main

[tool:pytest]
testpaths = tests

[pyscaffold]
version = 4.6
package = aumc_pipeline
extensions =
